내가 보는 채팅인지 확인하는 값 DTO 추가